Implement code generation

--- a/index-dev.html
+++ b/index-dev.html
@@ -12,6 +12,8 @@
 
     <script type="text/javascript" src="./vendor/vue/vue.js" defer></script>
 
+    <script type="text/javascript" src="./js/tsbean-codegen.js" defer></script>
+
     <script type="text/javascript" src="./js/sql-parser-syntax.js" defer></script>
     <script type="text/javascript" src="./js/sql-parser-sematic.js" defer></script>
     <script type="text/javascript" src="./js/sql-parser.js" defer></script>
