--- a/index.html
+++ b/index.html
@@ -5,31 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Code generator for tsbean-orm</title>
 
-    <link rel="stylesheet" href="./css/text-transform.css" />
+    <link rel="stylesheet" href="./css/text-transform.min.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
 
+    <script type="text/javascript" src="./vendor/vue/vue.min.js" defer></script>
+
+    <script type="text/javascript" src="./js/tsbean-codegen.min.js" defer></script>
+
+    <script type="text/javascript" src="./js/sql-parser-syntax.min.js" defer></script>
+    <script type="text/javascript" src="./js/sql-parser-sematic.min.js" defer></script>
+    <script type="text/javascript" src="./js/sql-parser.min.js" defer></script>
+
+    <script type="text/javascript" src="./js/main.min.js" defer></script>
     
 </head>
 
 <body>
-    <div class="main-container">
+    <div id="app" class="main-container">
         <div class="text-transform">
             <div class="tt-side tt-side-from">
-                <div class="tt-side-header"><span>FROM:</span><select class="tt-select tt-from">
-                        <option value="0" selected="">UTF-8</option>
-                        <option value="1">Hexadecimal</option>
-                        <option value="2">Base 64</option>
+                <div class="tt-side-header"><span>FROM:</span><select v-model="inputType" class="tt-select tt-from" @change="onUpdateInputCode">
+                        <option v-for="it in inputTypes" :value="it.id">{{it.name}}</option>
                     </select></div>
-                <div class="tt-side-body"><textarea class="tt-textarea tt-input"></textarea></div>
+                <div class="tt-side-body"><textarea class="tt-textarea tt-input" v-model="inputText" :placeholder="getPlaceholder(inputType)" @input="onUpdateInputCode"></textarea></div>
             </div>
             <div class="tt-side tt-side-to">
-                <div class="tt-side-header"><span>TO:</span><select class="tt-select tt-to">
-                        <option value="0" selected="">UTF-8</option>
-                        <option value="1">Hexadecimal</option>
-                        <option value="2">Base 64</option>
+                <div class="tt-side-header"><span>CLASS:</span><select v-model="outputClass" class="tt-select tt-to" @change="onUpdateOutputClass">
+                        <option :value="''">--- Select a Class ---</option>
+                        <option v-for="ot in outputClasses" :value="ot.id">{{ot.name}}</option>
                     </select></div>
-                <div class="tt-side-body"><textarea class="tt-textarea tt-output" readonly=""></textarea></div>
+                <div class="tt-side-body"><textarea class="tt-textarea tt-output" readonly="readonly" v-model="outputText"></textarea></div>
             </div>
         </div>
     </div>
