--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code generator for tsbean-orm</title>
+    <meta name="description" content="Tool to generate tsbean-orm classes from SQL table definitions.">
 
     <link rel="shortcut icon" type="image/ico" href="./favicon.ico" />
 
